// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saxly parse <?xml version="1.0" language="en/US"?>
<root/> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root attribute="value">
Text<element key="value" readonly>last name</element></root> 1`] = `
{
  "root": {
    "attributes": {
      "attribute": "value",
    },
    "content": [
      "
",
      "Text",
      {
        "attributes": {
          "key": "value",
          "readonly": undefined,
        },
        "content": [
          "last",
          " ",
          "name",
        ],
        "errors": [],
        "name": "element",
      },
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root attribute="value"></root> 1`] = `
{
  "root": {
    "attributes": {
      "attribute": "value",
    },
    "content": [],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root readonly></root> 1`] = `
{
  "root": {
    "attributes": {
      "readonly": undefined,
    },
    "content": [],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root/> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root>  first middle last</root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      "
  ",
      "first",
      " ",
      "middle",
      " ",
      "last",
      "
",
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root></root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root><nested/></root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      {
        "attributes": {},
        "content": [],
        "errors": [],
        "name": "nested",
      },
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root><nested></nested></root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      {
        "attributes": {},
        "content": [],
        "errors": [],
        "name": "nested",
      },
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root><nested><inner/></nested></root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      {
        "attributes": {},
        "content": [
          {
            "attributes": {},
            "content": [],
            "errors": [],
            "name": "inner",
          },
        ],
        "errors": [],
        "name": "nested",
      },
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root>first name</root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      "first",
      " ",
      "name",
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root>first<nested></nested>last</root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      "first",
      {
        "attributes": {},
        "content": [],
        "errors": [],
        "name": "nested",
      },
      "last",
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root>first<nested>middle</nested>last</root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      "first",
      {
        "attributes": {},
        "content": [
          "middle",
        ],
        "errors": [],
        "name": "nested",
      },
      "last",
    ],
    "errors": [],
    "name": "root",
  },
}
`;

exports[`saxly parse <root>text</root> 1`] = `
{
  "root": {
    "attributes": {},
    "content": [
      "text",
    ],
    "errors": [],
    "name": "root",
  },
}
`;
